added controllers and dtos

--- a/JobApplicationAPI/JobApplicationAPI.csproj
+++ b/JobApplicationAPI/JobApplicationAPI.csproj
@@ -8,9 +8,13 @@
 
   <ItemGroup>
     <Compile Remove="Scaffold\**" />
+    <Compile Remove="Shared\Models\Dtos\JobApplicationDto\**" />
     <Content Remove="Scaffold\**" />
+    <Content Remove="Shared\Models\Dtos\JobApplicationDto\**" />
     <EmbeddedResource Remove="Scaffold\**" />
+    <EmbeddedResource Remove="Shared\Models\Dtos\JobApplicationDto\**" />
     <None Remove="Scaffold\**" />
+    <None Remove="Shared\Models\Dtos\JobApplicationDto\**" />
   </ItemGroup>
 
   <ItemGroup>
@@ -34,10 +38,6 @@
     <PackageReference Include="Npgsql" Version="8.0.2" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.2" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Shared\Models\Dtos\ApplicationDtos\" />
   </ItemGroup>
 
 </Project>
