--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,7 @@
     "version": "0.0.0",
     "type": "module",
     "scripts": {
-        "dev": "vite --host 0.0.0.0",
+        "dev": "vite",
         "build": "tsc && vite build",
         "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
         "preview": "vite preview"
@@ -23,6 +23,7 @@
     },
     "devDependencies": {
         "@types/babel__generator": "^7.6.8",
+        "@types/node": "^22.13.0",
         "@types/react": "^18.2.66",
         "@types/react-dom": "^18.2.22",
         "@typescript-eslint/eslint-plugin": "^7.2.0",
